Fix checkbox alignment

--- a/src/app/my-absences/components/my-absences-report-list/my-absences-report-list.component.scss
+++ b/src/app/my-absences/components/my-absences-report-list/my-absences-report-list.component.scss
@@ -36,7 +36,7 @@
 .checkbox {
   grid-area: checkbox;
   margin: 0;
-  padding: 0.6rem $spacer * 0.5 0 0;
+  padding: 0.3rem $spacer 0 0;
 }
 .presence-category .material-icons {
   display: block;
